--- a/25ProjectClassic/Lib0023/Lib0023.csproj
+++ b/25ProjectClassic/Lib0023/Lib0023.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{3dbf882a-b059-4026-b04f-6412df5ce2fa}}</ProjectGuid>
+    <ProjectGuid>{3DBF882A-B059-4026-B04F-6412DF5CE2FA}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0023</RootNamespace>
     <AssemblyName>Lib0023</AssemblyName>
