--- a/25ProjectClassic/Lib0004/Lib0004.csproj
+++ b/25ProjectClassic/Lib0004/Lib0004.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{475137b6-7adc-4df9-ac41-ba1d8adeb535}}</ProjectGuid>
+    <ProjectGuid>{475137B6-7ADC-4DF9-AC41-BA1D8ADEB535}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0004</RootNamespace>
     <AssemblyName>Lib0004</AssemblyName>
