--- a/25ProjectClassic/Lib0005/Lib0005.csproj
+++ b/25ProjectClassic/Lib0005/Lib0005.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{45d1b0e6-1e6f-48a7-9007-af9510bf9b8d}}</ProjectGuid>
+    <ProjectGuid>{45D1B0E6-1E6F-48A7-9007-AF9510BF9B8D}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0005</RootNamespace>
     <AssemblyName>Lib0005</AssemblyName>
