--- a/25ProjectClassic/Lib0010/Lib0010.csproj
+++ b/25ProjectClassic/Lib0010/Lib0010.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{c426900e-0d1b-4dd2-a7f0-adbb62dbb267}}</ProjectGuid>
+    <ProjectGuid>{C426900E-0D1B-4DD2-A7F0-ADBB62DBB267}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0010</RootNamespace>
     <AssemblyName>Lib0010</AssemblyName>
