--- a/25ProjectClassic/Lib0013/Lib0013.csproj
+++ b/25ProjectClassic/Lib0013/Lib0013.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{14964ca2-3134-4601-8212-efefd46df433}}</ProjectGuid>
+    <ProjectGuid>{14964CA2-3134-4601-8212-EFEFD46DF433}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0013</RootNamespace>
     <AssemblyName>Lib0013</AssemblyName>
