--- a/25ProjectClassic/Lib0014/Lib0014.csproj
+++ b/25ProjectClassic/Lib0014/Lib0014.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{61ece269-4678-4cd2-bb10-d8344942292f}}</ProjectGuid>
+    <ProjectGuid>{61ECE269-4678-4CD2-BB10-D8344942292F}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0014</RootNamespace>
     <AssemblyName>Lib0014</AssemblyName>
