--- a/25ProjectClassic/Lib0015/Lib0015.csproj
+++ b/25ProjectClassic/Lib0015/Lib0015.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{ba1112cc-4de0-4a41-a887-6ccc743bc298}}</ProjectGuid>
+    <ProjectGuid>{BA1112CC-4DE0-4A41-A887-6CCC743BC298}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0015</RootNamespace>
     <AssemblyName>Lib0015</AssemblyName>
