--- a/25ProjectClassic/Lib0016/Lib0016.csproj
+++ b/25ProjectClassic/Lib0016/Lib0016.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{7e3affd1-71c2-4c7b-9c81-d6746e02dc7a}}</ProjectGuid>
+    <ProjectGuid>{7E3AFFD1-71C2-4C7B-9C81-D6746E02DC7A}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0016</RootNamespace>
     <AssemblyName>Lib0016</AssemblyName>
