--- a/25ProjectClassic/Lib0017/Lib0017.csproj
+++ b/25ProjectClassic/Lib0017/Lib0017.csproj
@@ -1,9 +1,9 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{{3cedd1a9-4108-428f-9f7f-94ff8f35df14}}</ProjectGuid>
+    <ProjectGuid>{3CEDD1A9-4108-428F-9F7F-94FF8F35DF14}</ProjectGuid>
     <OutputType>library</OutputType>
     <RootNamespace>Lib0017</RootNamespace>
     <AssemblyName>Lib0017</AssemblyName>
