--- a/25ProjectSdk/Lib0008/Lib0008.csproj
+++ b/25ProjectSdk/Lib0008/Lib0008.csproj
@@ -1,3 +1,4 @@
+<!--Make the project reload if this is checked out-->
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
