--- a/25ProjectSdk/Root/Root.csproj
+++ b/25ProjectSdk/Root/Root.csproj
@@ -1,3 +1,4 @@
+<!--Make the project reload if this is checked out-->
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
