Revert "remove Source0001.cs from each project"
This reverts commit edeee5dcee2ffc3b7ee847b4be2a8b5471d7455d.

--- a/25ProjectSdk/Lib0001/Lib0001.csproj
+++ b/25ProjectSdk/Lib0001/Lib0001.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="..\Source0001.cs" />
     <Compile Include="..\Source0002.cs" />
     <Compile Include="..\Source0003.cs" />
     <Compile Include="..\Source0004.cs" />
