--- a/25ProjectSdk/Lib0010/Lib0010.csproj
+++ b/25ProjectSdk/Lib0010/Lib0010.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="..\Source0001.cs" />
     <Compile Include="..\Source0002.cs" />
     <Compile Include="..\Source0003.cs" />
     <Compile Include="..\Source0004.cs" />
