--- a/25ProjectSdk/Root/Root.csproj
+++ b/25ProjectSdk/Root/Root.csproj
@@ -105,6 +105,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Source0001.cs" />
     <Compile Include="..\Source0002.cs" />
     <Compile Include="..\Source0003.cs" />
     <Compile Include="..\Source0004.cs" />
